# pp

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle
app/src/androidTest/java/com/jamesfchen/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: App.html
app/src/main/java/com/jamesfchen/app/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jamesfchen/app/: ExampleUnitTest.java
foundation/: build.gradle
foundation/src/main/java/com/jamesfchen/foundation/: PiscesRouter.kt
h5container/: build.gradle
h5container/src/androidTest/java/com/jamesfchen/h5container/: ExampleInstrumentedTest.kt
h5container/src/main/: AndroidManifest.xml
h5container/src/main/java/com/jamesfchen/h5container/: WebViewActivity.kt
h5container/src/main/res/layout/: activity_webview.xml
jsexecutor/: CMakeLists.txt  build.gradle.kts
jsexecutor/com/facebook/react/bridge/: JavaScriptExecutor.java  ReadableNativeMap.java  WritableNativeMap.java
jsexecutor/com/facebook/react/jscexecutor/: JSCExecutor.java
jsexecutor/com/facebook/react/reactexecutor/: HermesExecutor.java  HermesExecutorFactory.java  RuntimeConfig.java
jsexecutor/src/androidTest/java/com/jamesfchen/jsiexecutor/: ExampleInstrumentedTest.kt
jsexecutor/src/main/: AndroidManifest.xml
jsexecutor/src/main/cpp/hermesexecutor/: CMakeLists.txt
jsexecutor/src/main/cpp/jsi/: CMakeLists.txt
jsexecutor/src/main/cpp/jsiexecutor/: CMakeLists.txt
jsexecutor/src/main/java/com/quickjs/: ES6Module.java  JSArray.java  JSContext.java  JSFunction.java  JSObject.java  QuickJS.java
jsexecutor/src/main/jni/jscexecutor/: CMakeLists.txt
jsexecutor/src/test/java/com/jamesfchen/jsiexecutor/: ExampleUnitTest.kt
reactcontainer/: build.gradle
reactcontainer/src/main/java/com/jamesfchen/reactcontainer/: RNActivity.kt
